project4/project4/project4_2016-13343/subc.output
Terminals unused in grammar

    '/'
    '%'


State 24 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 $@1: %empty

    2 program: $@1 ext_def_list

    3 ext_def_list: ext_def_list ext_def
    4             | %empty

    5 ext_def: type_specifier pointers ID ';'
    6        | type_specifier pointers ID '[' INTEGER_CONST ']' ';'
    7        | func_decl ';'
    8        | type_specifier ';'

    9 $@2: %empty

   10 ext_def: func_decl $@2 compound_stmt

   11 type_specifier: TYPE
   12               | VOID
   13               | struct_specifier

   14 @3: %empty

   15 @4: %empty

   16 struct_specifier: STRUCT ID '{' @3 def_list @4 '}'
   17                 | STRUCT ID

   18 func_decl: type_specifier pointers ID '(' ')'
   19          | type_specifier pointers ID '(' VOID ')'

   20 @5: %empty

   21 func_decl: type_specifier pointers ID '(' @5 param_list ')'

   22 pointers: '*'
   23         | %empty

   24 param_list: param_decl
   25           | param_list ',' param_decl

   26 param_decl: type_specifier pointers ID
   27           | type_specifier pointers ID '[' INTEGER_CONST ']'

   28 def_list: def_list def
   29         | %empty

   30 def: type_specifier pointers ID ';'
   31    | type_specifier pointers ID '[' INTEGER_CONST ']' ';'
   32    | type_specifier ';'
   33    | func_decl ';'

   34 $@6: %empty

   35 compound_stmt: '{' local_defs $@6 stmt_list '}'

   36 local_defs: def_list

   37 stmt_list: stmt_list stmt
   38          | %empty

   39 stmt: expr ';'
   40     | compound_stmt
   41     | RETURN ';'

   42 $@7: %empty

   43 stmt: RETURN $@7 expr ';'
   44     | ';'
   45     | if_stmt

   46 $@8: %empty

   47 stmt: if_stmt ELSE $@8 stmt

   48 @9: %empty

   49 $@10: %empty

   50 stmt: WHILE @9 '(' expr ')' $@10 stmt

   51 $@11: %empty

   52 @12: %empty

   53 $@13: %empty

   54 $@14: %empty

   55 stmt: FOR $@11 '(' expr_e ';' @12 expr_e ';' $@13 expr_e ')' $@14 stmt
   56     | BREAK ';'
   57     | CONTINUE ';'
   58     | WRITE_INT '(' unary ')' ';'
   59     | WRITE_STRING '(' STRING ')' ';'

   60 @15: %empty

   61 $@16: %empty

   62 if_stmt: IF @15 '(' expr ')' $@16 stmt

   63 expr_e: expr
   64       | %empty

   65 $@17: %empty

   66 expr: unary $@17 '=' expr
   67     | or_expr

   68 or_expr: or_list

   69 or_list: or_list LOGICAL_OR and_expr
   70        | and_expr

   71 and_expr: and_list

   72 and_list: and_list LOGICAL_AND binary
   73         | binary

   74 binary: binary RELOP binary
   75       | binary EQUOP binary
   76       | binary '+' binary
   77       | binary '-' binary
   78       | unary

   79 unary: '(' expr ')'
   80      | '(' unary ')'
   81      | INTEGER_CONST
   82      | CHAR_CONST
   83      | STRING
   84      | ID
   85      | NULL_
   86      | '-' unary
   87      | '!' unary
   88      | unary INCOP
   89      | unary DECOP
   90      | INCOP unary
   91      | DECOP unary
   92      | '&' unary
   93      | '*' unary
   94      | unary '[' expr ']'
   95      | unary '.' ID
   96      | unary STRUCTOP ID

   97 @18: %empty

   98 unary: unary '(' @18 args ')'
   99      | unary '(' ')'

  100 args: expr
  101     | args ',' expr


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 87
    '%' (37)
    '&' (38) 92
    '(' (40) 18 19 21 50 55 58 59 62 79 80 98 99
    ')' (41) 18 19 21 50 55 58 59 62 79 80 98 99
    '*' (42) 22 93
    '+' (43) 76
    ',' (44) 25 101
    '-' (45) 77 86
    '.' (46) 95
    '/' (47)
    ';' (59) 5 6 7 8 30 31 32 33 39 41 43 44 55 56 57 58 59
    '=' (61) 66
    '[' (91) 6 27 31 94
    ']' (93) 6 27 31 94
    '{' (123) 16 35
    '}' (125) 16 35
    error (256)
    IFX (258)
    ELSE <idptr> (259) 47
    LOGICAL_OR <idptr> (260) 69
    LOGICAL_AND <idptr> (261) 72
    EQUOP <idptr> (262) 75
    RELOP <idptr> (263) 74
    INCOP <idptr> (264) 88 90
    DECOP <idptr> (265) 89 91
    STRUCTOP <idptr> (266) 96
    WRITE_INT (267) 58
    WRITE_STRING (268) 59
    ID <idptr> (269) 5 6 16 17 18 19 21 26 27 30 31 84 95 96
    TYPE <idptr> (270) 11
    VOID <idptr> (271) 12 19
    NULL_ <idptr> (272) 85
    STRUCT <idptr> (273) 16 17
    RETURN <idptr> (274) 41 43
    IF <idptr> (275) 62
    WHILE <idptr> (276) 50
    FOR <idptr> (277) 55
    BREAK <idptr> (278) 56
    CONTINUE <idptr> (279) 57
    STRING <stringVal> (280) 59 83
    INTEGER_CONST <intVal> (281) 6 27 31 81
    CHAR_CONST <charVal> (282) 82


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program (46)
        on left: 2
        on right: 0
    $@1 (47)
        on left: 1
        on right: 2
    ext_def_list <intVal> (48)
        on left: 3 4
        on right: 2 3
    ext_def <intVal> (49)
        on left: 5 6 7 8 10
        on right: 3
    $@2 (50)
        on left: 9
        on right: 10
    type_specifier <declptr> (51)
        on left: 11 12 13
        on right: 5 6 8 18 19 21 26 27 30 31 32
    struct_specifier <declptr> (52)
        on left: 16 17
        on right: 13
    @3 (53)
        on left: 14
        on right: 16
    @4 (54)
        on left: 15
        on right: 16
    func_decl <declptr> (55)
        on left: 18 19 21
        on right: 7 10 33
    @5 (56)
        on left: 20
        on right: 21
    pointers <boolVal> (57)
        on left: 22 23
        on right: 5 6 18 19 21 26 27 30 31
    param_list (58)
        on left: 24 25
        on right: 21 25
    param_decl (59)
        on left: 26 27
        on right: 24 25
    def_list <intVal> (60)
        on left: 28 29
        on right: 16 28 36
    def <intVal> (61)
        on left: 30 31 32 33
        on right: 28
    compound_stmt (62)
        on left: 35
        on right: 10 40
    $@6 (63)
        on left: 34
        on right: 35
    local_defs <intVal> (64)
        on left: 36
        on right: 35
    stmt_list (65)
        on left: 37 38
        on right: 35 37
    stmt (66)
        on left: 39 40 41 43 44 45 47 50 55 56 57 58 59
        on right: 37 47 50 55 62
    $@7 (67)
        on left: 42
        on right: 43
    $@8 (68)
        on left: 46
        on right: 47
    @9 (69)
        on left: 48
        on right: 50
    $@10 (70)
        on left: 49
        on right: 50
    $@11 (71)
        on left: 51
        on right: 55
    @12 (72)
        on left: 52
        on right: 55
    $@13 (73)
        on left: 53
        on right: 55
    $@14 (74)
        on left: 54
        on right: 55
    if_stmt <intVal> (75)
        on left: 62
        on right: 45 47
    @15 (76)
        on left: 60
        on right: 62
    $@16 (77)
        on left: 61
        on right: 62
    expr_e (78)
        on left: 63 64
        on right: 55
    expr <declptr> (79)
        on left: 66 67
        on right: 39 43 50 62 63 66 79 94 100 101
    $@17 (80)
        on left: 65
        on right: 66
    or_expr <declptr> (81)
        on left: 68
        on right: 67
    or_list <declptr> (82)
        on left: 69 70
        on right: 68 69
    and_expr <declptr> (83)
        on left: 71
        on right: 69 70
    and_list <declptr> (84)
        on left: 72 73
        on right: 71 72
    binary <declptr> (85)
        on left: 74 75 76 77 78
        on right: 72 73 74 75 76 77
    unary <declptr> (86)
        on left: 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 98 99
        on right: 58 66 78 80 86 87 88 89 90 91 92 93 94 95 96 98 99
    @18 (87)
        on left: 97
        on right: 98
    args <declptr> (88)
        on left: 100 101
        on right: 98 101


State 0

    0 $accept: . program $end

    $default  reduce using rule 1 ($@1)

    program  go to state 1
    $@1      go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    2 program: $@1 . ext_def_list

    $default  reduce using rule 4 (ext_def_list)

    ext_def_list  go to state 4


State 3

    0 $accept: program $end .

    $default  accept


State 4

    2 program: $@1 ext_def_list .
    3 ext_def_list: ext_def_list . ext_def

    TYPE    shift, and go to state 5
    VOID    shift, and go to state 6
    STRUCT  shift, and go to state 7

    $default  reduce using rule 2 (program)

    ext_def           go to state 8
    type_specifier    go to state 9
    struct_specifier  go to state 10
    func_decl         go to state 11


State 5

   11 type_specifier: TYPE .

    $default  reduce using rule 11 (type_specifier)


State 6

   12 type_specifier: VOID .

    $default  reduce using rule 12 (type_specifier)


State 7

   16 struct_specifier: STRUCT . ID '{' @3 def_list @4 '}'
   17                 | STRUCT . ID

    ID  shift, and go to state 12


State 8

    3 ext_def_list: ext_def_list ext_def .

    $default  reduce using rule 3 (ext_def_list)


State 9

    5 ext_def: type_specifier . pointers ID ';'
    6        | type_specifier . pointers ID '[' INTEGER_CONST ']' ';'
    8        | type_specifier . ';'
   18 func_decl: type_specifier . pointers ID '(' ')'
   19          | type_specifier . pointers ID '(' VOID ')'
   21          | type_specifier . pointers ID '(' @5 param_list ')'

    '*'  shift, and go to state 13
    ';'  shift, and go to state 14

    $default  reduce using rule 23 (pointers)

    pointers  go to state 15


State 10

   13 type_specifier: struct_specifier .

    $default  reduce using rule 13 (type_specifier)


State 11

    7 ext_def: func_decl . ';'
   10        | func_decl . $@2 compound_stmt

    ';'  shift, and go to state 16

    $default  reduce using rule 9 ($@2)

    $@2  go to state 17


State 12

   16 struct_specifier: STRUCT ID . '{' @3 def_list @4 '}'
   17                 | STRUCT ID .

    '{'  shift, and go to state 18

    $default  reduce using rule 17 (struct_specifier)


State 13

   22 pointers: '*' .

    $default  reduce using rule 22 (pointers)


State 14

    8 ext_def: type_specifier ';' .

    $default  reduce using rule 8 (ext_def)


State 15

    5 ext_def: type_specifier pointers . ID ';'
    6        | type_specifier pointers . ID '[' INTEGER_CONST ']' ';'
   18 func_decl: type_specifier pointers . ID '(' ')'
   19          | type_specifier pointers . ID '(' VOID ')'
   21          | type_specifier pointers . ID '(' @5 param_list ')'

    ID  shift, and go to state 19


State 16

    7 ext_def: func_decl ';' .

    $default  reduce using rule 7 (ext_def)


State 17

   10 ext_def: func_decl $@2 . compound_stmt

    '{'  shift, and go to state 20

    compound_stmt  go to state 21


State 18

   16 struct_specifier: STRUCT ID '{' . @3 def_list @4 '}'

    $default  reduce using rule 14 (@3)

    @3  go to state 22


State 19

    5 ext_def: type_specifier pointers ID . ';'
    6        | type_specifier pointers ID . '[' INTEGER_CONST ']' ';'
   18 func_decl: type_specifier pointers ID . '(' ')'
   19          | type_specifier pointers ID . '(' VOID ')'
   21          | type_specifier pointers ID . '(' @5 param_list ')'

    '['  shift, and go to state 23
    '('  shift, and go to state 24
    ';'  shift, and go to state 25


State 20

   35 compound_stmt: '{' . local_defs $@6 stmt_list '}'

    $default  reduce using rule 29 (def_list)

    def_list    go to state 26
    local_defs  go to state 27


State 21

   10 ext_def: func_decl $@2 compound_stmt .

    $default  reduce using rule 10 (ext_def)


State 22

   16 struct_specifier: STRUCT ID '{' @3 . def_list @4 '}'

    $default  reduce using rule 29 (def_list)

    def_list  go to state 28


State 23

    6 ext_def: type_specifier pointers ID '[' . INTEGER_CONST ']' ';'

    INTEGER_CONST  shift, and go to state 29


State 24

   18 func_decl: type_specifier pointers ID '(' . ')'
   19          | type_specifier pointers ID '(' . VOID ')'
   21          | type_specifier pointers ID '(' . @5 param_list ')'

    ')'   shift, and go to state 30
    VOID  shift, and go to state 31

    VOID      [reduce using rule 20 (@5)]
    $default  reduce using rule 20 (@5)

    @5  go to state 32


State 25

    5 ext_def: type_specifier pointers ID ';' .

    $default  reduce using rule 5 (ext_def)


State 26

   28 def_list: def_list . def
   36 local_defs: def_list .

    TYPE    shift, and go to state 5
    VOID    shift, and go to state 6
    STRUCT  shift, and go to state 7

    $default  reduce using rule 36 (local_defs)

    type_specifier    go to state 33
    struct_specifier  go to state 10
    func_decl         go to state 34
    def               go to state 35


State 27

   35 compound_stmt: '{' local_defs . $@6 stmt_list '}'

    $default  reduce using rule 34 ($@6)

    $@6  go to state 36


State 28

   16 struct_specifier: STRUCT ID '{' @3 def_list . @4 '}'
   28 def_list: def_list . def

    TYPE    shift, and go to state 5
    VOID    shift, and go to state 6
    STRUCT  shift, and go to state 7

    $default  reduce using rule 15 (@4)

    type_specifier    go to state 33
    struct_specifier  go to state 10
    @4                go to state 37
    func_decl         go to state 34
    def               go to state 35


State 29

    6 ext_def: type_specifier pointers ID '[' INTEGER_CONST . ']' ';'

    ']'  shift, and go to state 38


State 30

   18 func_decl: type_specifier pointers ID '(' ')' .

    $default  reduce using rule 18 (func_decl)


State 31

   19 func_decl: type_specifier pointers ID '(' VOID . ')'

    ')'  shift, and go to state 39


State 32

   21 func_decl: type_specifier pointers ID '(' @5 . param_list ')'

    TYPE    shift, and go to state 5
    VOID    shift, and go to state 6
    STRUCT  shift, and go to state 7

    type_specifier    go to state 40
    struct_specifier  go to state 10
    param_list        go to state 41
    param_decl        go to state 42


State 33

   18 func_decl: type_specifier . pointers ID '(' ')'
   19          | type_specifier . pointers ID '(' VOID ')'
   21          | type_specifier . pointers ID '(' @5 param_list ')'
   30 def: type_specifier . pointers ID ';'
   31    | type_specifier . pointers ID '[' INTEGER_CONST ']' ';'
   32    | type_specifier . ';'

    '*'  shift, and go to state 13
    ';'  shift, and go to state 43

    $default  reduce using rule 23 (pointers)

    pointers  go to state 44


State 34

   33 def: func_decl . ';'

    ';'  shift, and go to state 45


State 35

   28 def_list: def_list def .

    $default  reduce using rule 28 (def_list)


State 36

   35 compound_stmt: '{' local_defs $@6 . stmt_list '}'

    $default  reduce using rule 38 (stmt_list)

    stmt_list  go to state 46


State 37

   16 struct_specifier: STRUCT ID '{' @3 def_list @4 . '}'

    '}'  shift, and go to state 47


State 38

    6 ext_def: type_specifier pointers ID '[' INTEGER_CONST ']' . ';'

    ';'  shift, and go to state 48


State 39

   19 func_decl: type_specifier pointers ID '(' VOID ')' .

    $default  reduce using rule 19 (func_decl)


State 40

   26 param_decl: type_specifier . pointers ID
   27           | type_specifier . pointers ID '[' INTEGER_CONST ']'

    '*'  shift, and go to state 13

    $default  reduce using rule 23 (pointers)

    pointers  go to state 49


State 41

   21 func_decl: type_specifier pointers ID '(' @5 param_list . ')'
   25 param_list: param_list . ',' param_decl

    ','  shift, and go to state 50
    ')'  shift, and go to state 51


State 42

   24 param_list: param_decl .

    $default  reduce using rule 24 (param_list)


State 43

   32 def: type_specifier ';' .

    $default  reduce using rule 32 (def)


State 44

   18 func_decl: type_specifier pointers . ID '(' ')'
   19          | type_specifier pointers . ID '(' VOID ')'
   21          | type_specifier pointers . ID '(' @5 param_list ')'
   30 def: type_specifier pointers . ID ';'
   31    | type_specifier pointers . ID '[' INTEGER_CONST ']' ';'

    ID  shift, and go to state 52


State 45

   33 def: func_decl ';' .

    $default  reduce using rule 33 (def)


State 46

   35 compound_stmt: '{' local_defs $@6 stmt_list . '}'
   37 stmt_list: stmt_list . stmt

    '&'            shift, and go to state 53
    '-'            shift, and go to state 54
    '*'            shift, and go to state 55
    '!'            shift, and go to state 56
    INCOP          shift, and go to state 57
    DECOP          shift, and go to state 58
    '('            shift, and go to state 59
    WRITE_INT      shift, and go to state 60
    WRITE_STRING   shift, and go to state 61
    ID             shift, and go to state 62
    NULL_          shift, and go to state 63
    RETURN         shift, and go to state 64
    IF             shift, and go to state 65
    WHILE          shift, and go to state 66
    FOR            shift, and go to state 67
    BREAK          shift, and go to state 68
    CONTINUE       shift, and go to state 69
    STRING         shift, and go to state 70
    INTEGER_CONST  shift, and go to state 71
    CHAR_CONST     shift, and go to state 72
    ';'            shift, and go to state 73
    '{'            shift, and go to state 20
    '}'            shift, and go to state 74

    compound_stmt  go to state 75
    stmt           go to state 76
    if_stmt        go to state 77
    expr           go to state 78
    or_expr        go to state 79
    or_list        go to state 80
    and_expr       go to state 81
    and_list       go to state 82
    binary         go to state 83
    unary          go to state 84


State 47

   16 struct_specifier: STRUCT ID '{' @3 def_list @4 '}' .

    $default  reduce using rule 16 (struct_specifier)


State 48

    6 ext_def: type_specifier pointers ID '[' INTEGER_CONST ']' ';' .

    $default  reduce using rule 6 (ext_def)


State 49

   26 param_decl: type_specifier pointers . ID
   27           | type_specifier pointers . ID '[' INTEGER_CONST ']'

    ID  shift, and go to state 85


State 50

   25 param_list: param_list ',' . param_decl

    TYPE    shift, and go to state 5
    VOID    shift, and go to state 6
    STRUCT  shift, and go to state 7

    type_specifier    go to state 40
    struct_specifier  go to state 10
    param_decl        go to state 86


State 51

   21 func_decl: type_specifier pointers ID '(' @5 param_list ')' .

    $default  reduce using rule 21 (func_decl)


State 52

   18 func_decl: type_specifier pointers ID . '(' ')'
   19          | type_specifier pointers ID . '(' VOID ')'
   21          | type_specifier pointers ID . '(' @5 param_list ')'
   30 def: type_specifier pointers ID . ';'
   31    | type_specifier pointers ID . '[' INTEGER_CONST ']' ';'

    '['  shift, and go to state 87
    '('  shift, and go to state 24
    ';'  shift, and go to state 88


State 53

   92 unary: '&' . unary

    '&'            shift, and go to state 53
    '-'            shift, and go to state 54
    '*'            shift, and go to state 55
    '!'            shift, and go to state 56
    INCOP          shift, and go to state 57
    DECOP          shift, and go to state 58
    '('            shift, and go to state 59
    ID             shift, and go to state 62
    NULL_          shift, and go to state 63
    STRING         shift, and go to state 70
    INTEGER_CONST  shift, and go to state 71
    CHAR_CONST     shift, and go to state 72

    unary  go to state 89


State 54

   86 unary: '-' . unary

    '&'            shift, and go to state 53
    '-'            shift, and go to state 54
    '*'            shift, and go to state 55
    '!'            shift, and go to state 56
    INCOP          shift, and go to state 57
    DECOP          shift, and go to state 58
    '('            shift, and go to state 59
    ID             shift, and go to state 62
    NULL_          shift, and go to state 63
    STRING         shift, and go to state 70
    INTEGER_CONST  shift, and go to state 71
    CHAR_CONST     shift, and go to state 72

    unary  go to state 90


State 55

   93 unary: '*' . unary

    '&'            shift, and go to state 53
    '-'            shift, and go to state 54
    '*'            shift, and go to state 55
    '!'            shift, and go to state 56
    INCOP          shift, and go to state 57
    DECOP          shift, and go to state 58
    '('            shift, and go to state 59
    ID             shift, and go to state 62
    NULL_          shift, and go to state 63
    STRING         shift, and go to state 70
    INTEGER_CONST  shift, and go to state 71
    CHAR_CONST     shift, and go to state 72

    unary  go to state 91


State 56

   87 unary: '!' . unary

    '&'            shift, and go to state 53
    '-'            shift, and go to state 54
    '*'            shift, and go to state 55
    '!'            shift, and go to state 56
    INCOP          shift, and go to state 57
    DECOP          shift, and go to state 58
    '('            shift, and go to state 59
    ID             shift, and go to state 62
    NULL_          shift, and go to state 63
    STRING         shift, and go to state 70
    INTEGER_CONST  shift, and go to state 71
    CHAR_CONST     shift, and go to state 72

    unary  go to state 92


State 57

   90 unary: INCOP . unary

    '&'            shift, and go to state 53
    '-'            shift, and go to state 54
    '*'            shift, and go to state 55
    '!'            shift, and go to state 56
    INCOP          shift, and go to state 57
    DECOP          shift, and go to state 58
    '('            shift, and go to state 59
    ID             shift, and go to state 62
    NULL_          shift, and go to state 63
    STRING         shift, and go to state 70
    INTEGER_CONST  shift, and go to state 71
    CHAR_CONST     shift, and go to state 72

    unary  go to state 93


State 58

   91 unary: DECOP . unary

    '&'            shift, and go to state 53
    '-'            shift, and go to state 54
    '*'            shift, and go to state 55
    '!'            shift, and go to state 56
    INCOP          shift, and go to state 57
    DECOP          shift, and go to state 58
    '('            shift, and go to state 59
    ID             shift, and go to state 62
    NULL_          shift, and go to state 63
    STRING         shift, and go to state 70
    INTEGER_CONST  shift, and go to state 71
    CHAR_CONST     shift, and go to state 72

    unary  go to state 94


State 59

   79 unary: '(' . expr ')'
   80      | '(' . unary ')'

    '&'            shift, and go to state 53
    '-'            shift, and go to state 54
    '*'            shift, and go to state 55
    '!'            shift, and go to state 56
    INCOP          shift, and go to state 57
    DECOP          shift, and go to state 58
    '('            shift, and go to state 59
    ID             shift, and go to state 62
    NULL_          shift, and go to state 63
    STRING         shift, and go to state 70
    INTEGER_CONST  shift, and go to state 71
    CHAR_CONST     shift, and go to state 72

    expr      go to state 95
    or_expr   go to state 79
    or_list   go to state 80
    and_expr  go to state 81
    and_list  go to state 82
    binary    go to state 83
    unary     go to state 96


State 60

   58 stmt: WRITE_INT . '(' unary ')' ';'

    '('  shift, and go to state 97


State 61

   59 stmt: WRITE_STRING . '(' STRING ')' ';'

    '('  shift, and go to state 98


State 62

   84 unary: ID .

    $default  reduce using rule 84 (unary)


State 63

   85 unary: NULL_ .

    $default  reduce using rule 85 (unary)


State 64

   41 stmt: RETURN . ';'
   43     | RETURN . $@7 expr ';'

    ';'  shift, and go to state 99

    $default  reduce using rule 42 ($@7)

    $@7  go to state 100


State 65

   62 if_stmt: IF . @15 '(' expr ')' $@16 stmt

    $default  reduce using rule 60 (@15)

    @15  go to state 101


State 66

   50 stmt: WHILE . @9 '(' expr ')' $@10 stmt

    $default  reduce using rule 48 (@9)

    @9  go to state 102


State 67

   55 stmt: FOR . $@11 '(' expr_e ';' @12 expr_e ';' $@13 expr_e ')' $@14 stmt

    $default  reduce using rule 51 ($@11)

    $@11  go to state 103


State 68

   56 stmt: BREAK . ';'

    ';'  shift, and go to state 104


State 69

   57 stmt: CONTINUE . ';'

    ';'  shift, and go to state 105


State 70

   83 unary: STRING .

    $default  reduce using rule 83 (unary)


State 71

   81 unary: INTEGER_CONST .

    $default  reduce using rule 81 (unary)


State 72

   82 unary: CHAR_CONST .

    $default  reduce using rule 82 (unary)


State 73

   44 stmt: ';' .

    $default  reduce using rule 44 (stmt)


State 74

   35 compound_stmt: '{' local_defs $@6 stmt_list '}' .

    $default  reduce using rule 35 (compound_stmt)


State 75

   40 stmt: compound_stmt .

    $default  reduce using rule 40 (stmt)


State 76

   37 stmt_list: stmt_list stmt .

    $default  reduce using rule 37 (stmt_list)


State 77

   45 stmt: if_stmt .
   47     | if_stmt . ELSE $@8 stmt

    ELSE  shift, and go to state 106

    $default  reduce using rule 45 (stmt)


State 78

   39 stmt: expr . ';'

    ';'  shift, and go to state 107


State 79

   67 expr: or_expr .

    $default  reduce using rule 67 (expr)


State 80

   68 or_expr: or_list .
   69 or_list: or_list . LOGICAL_OR and_expr

    LOGICAL_OR  shift, and go to state 108

    $default  reduce using rule 68 (or_expr)


State 81

   70 or_list: and_expr .

    $default  reduce using rule 70 (or_list)


State 82

   71 and_expr: and_list .
   72 and_list: and_list . LOGICAL_AND binary

    LOGICAL_AND  shift, and go to state 109

    $default  reduce using rule 71 (and_expr)


State 83

   73 and_list: binary .
   74 binary: binary . RELOP binary
   75       | binary . EQUOP binary
   76       | binary . '+' binary
   77       | binary . '-' binary

    EQUOP  shift, and go to state 110
    RELOP  shift, and go to state 111
    '+'    shift, and go to state 112
    '-'    shift, and go to state 113

    $default  reduce using rule 73 (and_list)


State 84

   66 expr: unary . $@17 '=' expr
   78 binary: unary .
   88 unary: unary . INCOP
   89      | unary . DECOP
   94      | unary . '[' expr ']'
   95      | unary . '.' ID
   96      | unary . STRUCTOP ID
   98      | unary . '(' @18 args ')'
   99      | unary . '(' ')'
